--- a/style.css
+++ b/style.css
@@ -51,6 +51,14 @@ h3 {
   background-color: rgba(255,255,255,0.5);
 }
 
+.standard {
+  background-color: rgba(255,255,255,1);
+}
+
+p {
+  color: black;
+}
+
 .dropp {
   margin-top: 50px;
 }
