--- a/style.css
+++ b/style.css
@@ -13,13 +13,16 @@ h1 {
   margin-top: 10px;
   color: maroon;
   font-family: 'Mansalva';
+  font-size: large;
 }
 
 h2 {
   text-align: center;
   margin-top: 10px;
   color: maroon;
-  font-family: 'Satisfy';
+  font-family: 'Times New Roman';
+  font-style: italic;
+  font-size: xx-large;
 }
 
 h3 {
@@ -27,6 +30,16 @@ h3 {
   margin-top: 80px;
   color: maroon;
   font-family: 'Satisfy';
+  font-size: larger;
+}
+
+h4 {
+  text-align: center;
+  margin-top: 10px;
+  color: maroon;
+  font-family: 'Times New Roman';
+  font-style: normal;
+  font-size: xx-large;
 }
 
 #navbar {
@@ -52,7 +65,8 @@ h3 {
 }
 
 .standard {
-  background-color: rgba(255,255,255,1);
+  background-color: beige;
+  font-size: large;
 }
 
 p {
