--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .site-background {
   background-image: url("https://www.tokkoro.com/picsup/3101847-acoustic_classic_entertainment_fingerboard_folk_fretboard_hawaiian_instrument_leisure_music_musical_snail_song_strings_traditional_ukes_ukulele_vintage_wood.jpg");
-  height: 3800px;
+  height: 3100px;
   color: white;
 }
 
@@ -51,7 +51,7 @@ h4 {
   color: maroon;
   font-family: 'Times New Roman';
   font-style: normal;
-  font-size: xx-large;
+  font-size: 55px;
 }
 
 #navbar {
