--- a/style.css
+++ b/style.css
@@ -205,3 +205,17 @@ p {
 .demo:hover {
   opacity: 1;
 }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
